    (Issues #2449, #2651)
  * Testsuite does not any more matplotlib.use('agg') (#2191)
  * In ChainReader, read_frame does not trigger change of iterating position.
    (Issue #2723, PR #2815)
  * TRZReader now checks `n_atoms` on reading. (Issue #2817, PR #2820)
  * TRZWriter now writes `n_atoms` to the file. (Issue #2817, PR #2820)
  * fixed InterRDF_s function now gives correct results if density=True.
    (Issue #2811, PR #2812)

Enhancements
  * Added the RDKitParser which creates a `core.topology.Topology` object from
    an `rdkit.Chem.rdchem.Mol` object, and the RDKitReader to read coordinates
    from RDKit conformers (Issue #2468, PR #2707)
  * Added the `Aromaticities` topology attribute, and the `aromatic` selection
    token (Issue #2468, PR #2707)
  * Added the `from_smiles` classmethod to the Universe (Issue #2468, PR #2707)
  * Added computation of Mean Squared Displacements (#2438, PR #2619)
  * Improved performances when parsing TPR files (PR #2804)
  * Added converter between Cartesian and Bond-Angle-Torsion coordinates (PR #2668)

Changes
  * deprecated NumPy type aliases have been replaced with their actual types
    (see upstream NumPy PR 14882), and our pytest configuration will raise an
    error for any violation when testing with development NumPy builds
    (`1.20.0`)
  * Changes development status from Beta to Mature (Issue #2773)
  * Removes deprecated MDAnalysis.analysis.hole, please use
    MDAnalysis.analysis.hole2.hole instead (Issue #2739)
  * Replaces use of mock in favour of unittest.mock (Issue #2777)
  * Removes support for passing `atoms` to XYZWriter. (Issue #2739, PR #2754)
  * Removes; deprecated support for using Writer.write(Timestep), deprecated
    Writer.write_next_timestep, use write() instead. (Issue #2739)
  * Removes deprecated density_from_Universe, density_from_PDB, Bfactor2RMSF,
    and notwithin_coordinates_factory from MDAnalysis.analysis.density
    (Issue #2739)